p2/confs/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-one
  namespace: hello-kubernetes
spec:
  selector:
    app: app-one
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: app-two
  namespace: hello-kubernetes
spec:
  selector:
    app: app-two
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: app-three
  namespace: hello-kubernetes
spec:
  selector:
    app: app-three
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
